# clover

./: .gitignore  README.md  main.py  pyproject.toml
.copilot-tracking/research/2026-06-14/: data-strategy-research.md
.copilot-tracking/research/subagents/2026-06-14/: baseline-data-assumptions-research.md  diagram-benchmark-research.md  repo-data-surfaces-research.md
clover/exp/: b2diffurl.ipynb  ddpo.ipynb
clover/utils/: utils.py
