[project]
name = "clover"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "diffusers",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.9",
    "peft",
    "tensorboard>=2.20.0",
    "torchvision>=0.27.1",
    "trl>=1.7.0",
    "wandb>=0.28.0",
    "xformers>=0.0.35",
]
